@@ -1,17 +1,13 @@
 package com.opus.comment.domain;
 
-import com.opus.common.ResponseCode;
-import com.opus.exception.BusinessExceptionHandler;
 import lombok.Builder;
 import lombok.Getter;
-
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Builder
 @Getter
 public class CommentResponseDTO {
+
     private Integer commentId;
 
     private Integer pinId;
@@ -46,18 +42,8 @@ public class CommentResponseDTO {
 
     public static List<CommentResponseDTO> of(List<CommentVO> commentVOList) {
 
-        if (commentVOList == null) {
-            return Collections.emptyList();
-        }
-
-        try {
-            return commentVOList.stream()
-                    .map(CommentResponseDTO::of)
-                    // steram().toList는 Java 16부터 사용 가능
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new BusinessExceptionHandler(ResponseCode.BUSINESS_ERROR, "CommentResponseDTO 변환 중 오류가 발생했습니다.");
-
-        }
+        return commentVOList.stream()
+                .map(CommentResponseDTO::of)
+                .toList();
     }
 }
